# AscendCContest

./: README.md
01Addcmul/FrameworkLaunch/: Addcmul.json
01Addcmul/FrameworkLaunch/Addcmul/build_out/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  custom_opp_ubuntu_aarch64.run  custom_opp_ubuntu_aarch64.run.json  install_manifest.txt
01Addcmul/FrameworkLaunch/Addcmul/op_host/: addcmul.cpp  addcmul_tiling.h
01Addcmul/KernelLaunch/MseLossKernelInvocation/: mseloss.cpp
02FastGelu/FrameworkLaunch/: FastGelu.json
02FastGelu/KernelLaunch/MseLossKernelInvocation-f16/: mseloss.cpp
03FastGeluGrad/FrameworkLaunch/: FastGeluGrad.json
03FastGeluGrad/KernelLaunch/MseLossKernelInvocation/cmake/npu/: CMakeLists.txt
04LessEqual/FrameworkLaunch/: LessEqual.json
04LessEqual/FrameworkLaunch/LessEqualTest/: run.sh
05MseLoss/: README.md
05MseLoss/FrameworkLaunch/: MseLoss.json  README.md
05MseLoss/FrameworkLaunch/AclNNInvocation/: run.sh
05MseLoss/KernelLaunch/MseLossKernelInvocation-f16/cmake/cpu/: CMakeLists.txt
06MseLossGrad/FrameworkLaunch/: MseLossGrad.json
06MseLossGrad/KernelLaunch/MseLossKernelInvocation-f16/: addcdiv_custom_cpu
07ClipByValue/FrameworkLaunch/: ClipByValue.json
08LpNormV2/FrameworkLaunch/: LpNormV2.json
08LpNormV2/FrameworkLaunch/LpNormV2Test/: run.sh
09Spence/FrameworkLaunch/: Spence.json
09Spence/FrameworkLaunch/Spence/: CMakePresets.json
09Spence/FrameworkLaunch/SpenceTest/: run.sh
09Spence/KernelLaunch/: README.md
10ScatterSub/FrameworkLaunch/: ScatterSub.json
10ScatterSub/FrameworkLaunch/ScatterSub_v1/KernelLaunch/MseLossKernelInvocation-f16/: CMakeLists.txt  run.sh
10ScatterSub/FrameworkLaunch/ScatterSub_v1/KernelLaunch/MseLossKernelInvocation-f16/cceprint/: mse_loss_0_0_mix.cce
10ScatterSub/FrameworkLaunch/ScatterSub_v1/KernelLaunch/MseLossKernelInvocation-f16/scripts/: verify_result.py
10ScatterSub/KernelLaunch/MseLossKernelInvocation-f16/: main.cpp
11ScatterMax/FrameworkLaunch/: ScatterMax.json
11ScatterMax/KernelLaunch/MseLossKernelInvocation/: addcdiv_custom_cpu
(+2993 files in other folders)
